# azure-storage-fuse

./: CMakeLists.txt  README.md
src/: adaptor.cc  adaptor.h  config.json  file_ops.cc  file_ops.h  main.cc
src/adaptors/: application_id.h  azure_storage_blob_adaptor.cc  azure_storage_blob_adaptor.h  azure_storage_datalake_adaptor.cc  azure_storage_datalake_adaptor.h  azure_storage_file_adaptor.cc  azure_storage_file_adaptor.h  debug_adaptor.h  root_directory_adaptor.h
